update Backend to Master (#45)
* .

* update README.md

* remove .idea

* fix cors issue

* API call encapsulating

* fix the counter's bug, and specify the knowledge ID

* update work diary for week 4

* update document_implement file to fix the string id duplicate error

* update knowledge_base_implement file to fix the list_knowledge_base calling error

* redecorate details stout

* redecorate stout for knowledge base implement

* fix the valueError bug

* remove config from git

* add post method of ask to send text input to dialogflow

* refine the response format in swagger

* add detect intent implement

* add ask method

* update swagger

* update changes of schemas and routes two files

* add new implement tool for entity types

* add intent implement

* update intent_implement

* Implemented intent_detect API function

* credential added in a compromised way

* Backend detect_intent_API ready   (#35)

* add post method of ask to send text input to dialogflow

* refine the response format in swagger

* add detect intent implement

* add ask method

* update swagger

* update changes of schemas and routes two files

* add new implement tool for entity types

* add intent implement

* update intent_implement

* Implemented intent_detect API function

* credential added in a compromised way

* remove credentials in run.py - did not work for gunicorn

* bug fixed in /ask endpoint, unformatted response

* try another way to pass google authenticate

* try another way to pass google authenticate

* 502 on ask api on PWS, but good locally, weird...

* try scale down server, see what happens

* Df playground to Production (#43)

* try another way to pass google authenticate

* move tmp.json to the right place

* try another way to pass google authenticate

* scrape data for comp9311

* add context implement and set query with current context

* save context into session
